--- a/src/main/resources/templates/son/addSong.html
+++ b/src/main/resources/templates/son/addSong.html
@@ -22,6 +22,9 @@
     <div style="color:red" th:if="${#fields.hasErrors('duration')}" th:errors="*{duration}">Duration error</div>
   </div>
   <div>
+    <input type="hidden" th:field="*{album.albumId}" />
+  </div>
+  <div>
     <input type="submit" value="Добавить"/>
   </div>
 </form>
