artist -> song and artist -> album -> song references between album and genre were deleted

--- a/src/main/resources/templates/alb/albumDetails.html
+++ b/src/main/resources/templates/alb/albumDetails.html
@@ -10,7 +10,11 @@
     <button th:onclick="|window.location.href='@{/albums/{id}/edit(id=${album.albumId})}'|">Редактировать</button>
 </p>
 
-//добавить имя артиста
+<div th:if="${album.artist != null}">
+    <p>
+        Артист: <a th:href="@{/artists/{id}(id=${album.artist.artistId})}" th:text="${album.artist.name}">Name</a>
+    </p>
+</div>
 
 
 <div th:if="${not #lists.isEmpty(album.songs)}">
@@ -35,7 +39,7 @@
 
 
 <p>
-    <button th:onclick="|window.location.href='@{/songs/new(albumId=${album.albumId})}'|">Добавить песню</button>
+    <button th:onclick="|window.location.href='@{/songs/new(albumId=${album.albumId}, artistId=${album.artist.artistId})}'|">Добавить песню</button>
 </p>
 <p>
 <form th:action="@{/albums/{id}(id=${album.albumId})}" method="post">
