--- a/src/main/resources/templates/son/addSong.html
+++ b/src/main/resources/templates/son/addSong.html
@@ -25,6 +25,9 @@
     <input type="hidden" th:field="*{album.albumId}" />
   </div>
   <div>
+    <input type="hidden" th:field="*{artist.artistId}" />
+  </div>
+  <div>
     <input type="submit" value="Добавить"/>
   </div>
 </form>
