--- a/src/main/resources/templates/son/editSong.html
+++ b/src/main/resources/templates/son/editSong.html
@@ -21,6 +21,14 @@
         <div style="color:red" th:if="${#fields.hasErrors('duration')}" th:errors="*{duration}">Duration error</div>
     </div>
     <div>
+        <p>Выберите жанр:</p>
+        <label>
+            <select name="genreId">
+                <option th:each="genre : ${genres}" th:value="${genre.genreId}" th:text="${genre.name}"></option>
+            </select>
+        </label>
+    </div>
+    <div>
         <button type="Submit">Сохранить</button>
         <a th:href="@{/songs/{id}(id=${song.songId})}">Отменить</a>
     </div>
