--- a/src/main/resources/templates/art/addArtist.html
+++ b/src/main/resources/templates/art/addArtist.html
@@ -17,10 +17,9 @@
     </div>
     <div>
         <label for="photo">Фото:</label>
-        <input type="file" id="photo" name="photo" />
-        <div style="color:red" th:if="${param.error == 'file_not_uploaded'}">Файл не выбран</div>
-        <div style="color:red" th:if="${param.error == 'file_upload_failed'}">Ошибка загрузки файла</div>
+        <input type="file" id="photo" name="photo" accept="image/*" required>
     </div>
+
     <div>
         <input type="submit" value="Добавить"/>
     </div>
