--- a/src/main/resources/templates/pla/editPlaylist.html
+++ b/src/main/resources/templates/pla/editPlaylist.html
@@ -14,6 +14,7 @@
         <label for="description">Description:</label>
         <input type="text" id="description" th:field="*{description}" />
     </div>
+    <input type="hidden" th:field="*{owner.personId}"/>
     <div>
         <button type="Submit">Сохранить</button>
         <a th:href="@{/playlists/{id}(id=${playlist.playlistId})}">Отменить</a>
