Security без рабочего JWT

--- a/src/main/resources/templates/per/persons.html
+++ b/src/main/resources/templates/per/persons.html
@@ -25,7 +25,7 @@
 </table>
 <br/>
 <hr/>
-<a href="/people/new"/>Добавить пользователя</a>
+<a href="/people/new">Добавить пользователя</a>
 <hr/>
 </body>
 </html>
